# mne-rt

./: .buildinfo  .gitignore  MANIFEST.in  README.md  antares.sh  antares_2.py  antares_gui.py  api.html  cli.html  config_master.yml  denoising.html  environment.yml  genindex.html  index.html  install.html  modalities.html  objects.inv  protocols.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  test.ipynb  tutorial.html  visualization.html  whats_new.html
.doctrees/: api.doctree  cli.doctree  denoising.doctree  index.doctree  install.doctree  modalities.doctree  protocols.doctree  sg_execution_times.doctree  tutorial.doctree  visualization.doctree  whats_new.doctree
.doctrees/auto_examples/: ex_alpha_laterality_nf.doctree  ex_artifact_comparison.doctree  ex_bad_channel_detection.doctree  ex_complete_nf_session.doctree  ex_erp_plots.doctree  ex_maxwell_realtime.doctree  ex_motor_imagery_nf.doctree  index.doctree  sg_execution_times.doctree
.github/workflows/: ci.yml
_downloads/38e585705e0a01166099d23dca54448e/: ex_alpha_laterality_nf.ipynb
_downloads/3b20d5ad534f913c51efe66e8e8e3566/: ex_motor_imagery_nf.py
_downloads/72cf43f6ccea3e7a859cdef1561f145e/: ex_bad_channel_detection.ipynb
_downloads/8a20dd7b0722f19979bc30b3193f1a9b/: ex_alpha_laterality_nf.py
_downloads/a10000788958a508d684695d621b93f5/: ex_complete_nf_session.ipynb
_downloads/c1bbb24450193fa168eff80a6b0eb7be/: ex_maxwell_realtime.ipynb
_downloads/c9741071086b720db0dce8bc2850e148/: ex_artifact_comparison.ipynb
_downloads/c9aa79cc34d1406dfc897ab95d790ff8/: ex_motor_imagery_nf.ipynb
_downloads/d42bdd7db12ef15a5c8985cc791ce39a/: ex_erp_plots.py
_downloads/db8ebe33f1d9f2bf1bcd78e97e7e5b6e/: ex_maxwell_realtime.py
_downloads/ea5aa30876b66d4706fa960501bf97ce/: ex_erp_plots.ipynb
_downloads/eb02ac697ead0f0b92dc1abb37ace116/: ex_bad_channel_detection.py
_downloads/f4e15d31aeca1729dca8853fa29b4db9/: ex_artifact_comparison.py
_modules/: index.html
_modules/mne_rt/: _logging.html  combiners.html  lsl_output.html  modalities.html  osc.html  rt_epochs.html  rt_stream.html
_modules/mne_rt/protocols/: linear_trend.html  multiband.html  operant.html  percentile.html  rl_protocol.html  sham.html  staircase.html  threshold.html  transfer.html  zscores.html
_modules/mne_rt/tools/: asr.html  bad_channel_detector.html  bids_io.html  gedai.html  lms.html  maxwell.html  orica.html  riemannian_potato.html  simulation.html
_modules/mne_rt/viz/: brain_plot.html  butterfly_plot.html  compare_evoked.html  epoch_plot.html  nf_plot.html  raw_plot.html  tfr_plot.html  topo_plot.html  topomap_plot.html
_sources/: cli.rst.txt  denoising.rst.txt  modalities.rst.txt  protocols.rst.txt  sg_execution_times.rst.txt  tutorial.rst.txt  visualization.rst.txt  whats_new.rst.txt
_sources/auto_examples/: ex_alpha_laterality_nf.rst.txt  ex_artifact_comparison.rst.txt  ex_bad_channel_detection.rst.txt  ex_complete_nf_session.rst.txt  ex_erp_plots.rst.txt  ex_maxwell_realtime.rst.txt  ex_motor_imagery_nf.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: custom.css
auto_examples/: ex_alpha_laterality_nf.html  ex_artifact_comparison.html  ex_bad_channel_detection.html  ex_complete_nf_session.html  ex_erp_plots.html  ex_maxwell_realtime.html  ex_motor_imagery_nf.html  index.html  sg_execution_times.html
docs/: Makefile
docs/source/: api.rst  cli.rst  conf.py  denoising.rst  index.rst  install.rst  modalities.rst  references.bib  sg_execution_times.rst  visualization.rst  whats_new.rst
docs/source/_static/: ant_workflow.html
docs/source/auto_examples/: index.rst  plot_artifact_comparison.codeobj.json  plot_artifact_comparison.ipynb  plot_artifact_comparison.py  plot_artifact_comparison.py.md5  plot_artifact_comparison.rst  plot_delay_profile.py  plot_maxwell_realtime.codeobj.json  plot_maxwell_realtime.ipynb  plot_maxwell_realtime.py  plot_maxwell_realtime.py.md5  plot_maxwell_realtime.rst  plot_multi_session.py  plot_nf_realtime_viz.ipynb  plot_nf_realtime_viz.py  plot_nf_realtime_viz.py.md5  plot_nf_realtime_viz.rst  plot_realtime_three_windows.ipynb  plot_realtime_three_windows.py  plot_realtime_three_windows.py.md5  plot_realtime_three_windows.rst  sg_execution_times.rst
examples/: ex_bad_channel_detection.py  ex_complete_nf_session.py
src/ant/: __init__.py  cli.py  config_methods.yml  modalities.py  osc.py  realtime_nf.py
src/ant/protocols/: linear_trend.py  multiband.py  sham.py  threshold.py
src/ant/tools/: __init__.py  asr.py  bad_channel_detector.py  gedai.py  lms.py  maxwell.py  riemannian_potato.py
src/ant/viz/: brain_plot.py  nf_plot.py
src/mne_rt/: __init__.py  _logging.py  cli.py  combiners.py  config_methods.yml  lsl_output.py  modalities.py  osc.py  rt_epochs.py  rt_stream.py
src/mne_rt/protocols/: __init__.py  linear_trend.py  multiband.py  operant.py  percentile.py  rl_protocol.py  sham.py  staircase.py  threshold.py  transfer.py  zscores.py
src/mne_rt/tools/: __init__.py  asr.py  bad_channel_detector.py  bids_io.py  gedai.py  lms.py  maxwell.py  orica.py  riemannian_potato.py  simulation.py  (+1 more)
tests/: conftest.py  test_asr.py  test_bad_channel_detector.py  test_bids_io.py  test_brain_plot.py  test_cli.py  test_combiners.py  test_gedai.py  test_imports.py  test_instantaneous_phase.py  test_linear_trend_protocol.py  test_lms.py  test_logging.py  test_lsl_sender.py  test_maxwell.py  test_modalities.py  test_multiband_protocol.py  test_new_modalities.py  test_new_protocols.py  test_nfrealtime.py  test_operant_protocol.py  test_orica.py  test_osc.py  test_percentile_protocol.py  test_riemannian_potato_detector.py  test_rl_protocol.py  test_rt_epochs_erp.py  test_rt_stream.py  test_sham_protocol.py  test_simulate_nf_session.py  test_simulation.py  test_staircase_protocol.py  test_threshold_protocol.py  test_tools.py  test_transfer_protocol.py  test_viz_plots.py  test_zscore_protocol.py
(+11 files in other folders)
