[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "mne-rt"
version = "1.0.2"
description = "MNE-RT — real-time M/EEG signal processing and analysis"
authors = [
    { name = "Payam S. Shabestari", email = "payam.sadeghi74@gmail.com" },
]
maintainers = [
    { name = "Payam S. Shabestari", email = "payam.sadeghi74@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"

keywords = [
    "neurofeedback", "EEG", "MEG", "brain-computer interface",
    "real-time", "LSL", "source localisation", "signal processing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

# Core runtime dependencies (always required)
dependencies = [
    "mne>=1.8",
    "mne-lsl>=1.7",
    "mne-connectivity>=0.7",
    "mne-features>=0.3",
    "mne-icalabel>=0.5",
    "numpy>=2.0,<3",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "nibabel>=5.0",
    "pyqtgraph>=0.13",
    "qtpy>=2.4",
    "pyserial>=3.0",       # required by mne-lsl / liblsl
    "fooof>=1.0",          # spectral parameterisation (specparam when stable)
    "pyunlocbox>=0.5.2",
    "pactools>=0.3",
    "pyyaml>=6.0",
    "imageio[ffmpeg]>=2.28",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]

# Qt binding — install one of these (PyQt6 is the default for standalone installs)
pyqt6 = ["PyQt6>=6.7"]
pyside6 = ["PySide6>=6.7"]
# OSC feedback output (not on conda-forge; install via pip if needed)
osc = ["python-osc>=1.8"]

# 3-D brain visualisation (BrainPlot) — not needed for sensor-space NF
viz = [
    "pyvista>=0.44",
    "pyvistaqt>=0.11.1",
    "vtk>=9.3",
]

# Riemannian geometry artifact detection (RiemannianPotatoDetector)
riemann = [
    "pyriemann>=0.7",
]

# BIDS-format data export (save_as_bids)
bids = [
    "mne-bids>=0.14",
]

# Testing only (fast install)
dev = [
    "pytest",
    "pytest-cov",
]

# Linting and formatting tools
lint = [
    "ruff",
    "mypy",
    "pre-commit",
]

# Documentation build tooling (heavy — only needed to build the docs)
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme>=0.14",
    "sphinx-gallery>=0.15",
    "numpydoc>=1.6",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-tabs>=3.4",
    "sphinxcontrib-bibtex>=2.6",
    "seaborn>=0.12",
]

# Everything: all optional extras (inlined — no self-reference, compatible with uv)
full = [
    # viz
    "pyvista>=0.44",
    "pyvistaqt>=0.11.1",
    "vtk>=9.3",
    # riemann
    "pyriemann>=0.7",
    # bids
    "mne-bids>=0.14",
    # dev
    "pytest",
    "pytest-cov",
    # lint
    "ruff",
    "mypy",
    "pre-commit",
    # docs
    "sphinx>=7",
    "pydata-sphinx-theme>=0.14",
    "sphinx-gallery>=0.15",
    "numpydoc>=1.6",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-tabs>=3.4",
    "sphinxcontrib-bibtex>=2.6",
    "seaborn>=0.12",
]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------

[project.scripts]
mne-rt = "mne_rt.cli:main"

# ---------------------------------------------------------------------------
# URLs
# ---------------------------------------------------------------------------

[project.urls]
Homepage      = "https://github.com/payamsash/mne-rt"
Documentation = "https://payamsash.github.io/mne-rt/"
Repository    = "https://github.com/payamsash/mne-rt"
"Bug Tracker" = "https://github.com/payamsash/mne-rt/issues"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mne_rt" = [
    "config_methods.yml",   # bundled default NF modality config
]

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = [
    "E501",   # line too long — handled by formatter
    "F401",   # unused import in __init__.py re-exports
]

[tool.ruff.lint.per-file-ignores]
"src/mne_rt/__init__.py" = ["F401"]
"src/mne_rt/tools/__init__.py" = ["F401", "F403"]

# ---------------------------------------------------------------------------
# Mypy (optional type checking)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
